8258147: Modernize Nashorn code
Reviewed-by: sundar